# cotprobe

./: .gitignore  README.md  best_model.pt  cot.ipynb  gen_dataset.ipynb  prompting.py  pyproject.toml  reprocess_dataset.ipynb  sort_responses.ipynb  stat.txt  train_multi_probe.py  train_probe.py  train_tf.py  use_probe.ipynb
.ipynb_checkpoints/: cot-checkpoint.ipynb  gen_dataset-checkpoint.ipynb  sort_responses-checkpoint.ipynb  train_probe-checkpoint.py
activation_caching/: filter_dataset.ipynb  load_activations.py  train.py  transformer.py
responses-deepseek-ai-DeepSeek-R1-Distill-Llama-70B-free/: 0000b13e-a99a-4be6-8350-32a29159bacf.txt  00024f73-ffdd-4839-aa5b-d7f6a2b48605.txt  000accdf-fd7c-4e1c-b4ba-28dbda4430c4.txt  000c09b7-99cf-48a0-96bd-909e0a35c24f.txt  001357a4-38c4-4acf-b620-8dc311a82b90.txt  00135f22-5cd1-480e-8c7f-d7dc70d81766.txt  00145a63-1238-497c-8556-d7d897653991.txt  001610ad-aaeb-4ad5-94a1-a961cb7dc0e5.txt  001add77-0aed-45df-8b52-0066b872ef86.txt  001c234a-4837-47bf-9484-674821bd05f1.txt  0023963f-c702-443b-8378-a14b1e59a2b2.txt  0023d442-28f0-4af6-a39f-f90e02d0657b.txt  002e6a4e-54cf-43cc-9a11-56e5166a83eb.txt  0031319e-ce27-47c8-84bf-1940cd8a6522.txt  00359eb6-988a-4b65-be15-66fe5135cb45.txt  00375f98-ecdf-4a66-9a2a-bd90c56174f7.txt  00406a7d-3869-4c28-8f22-344466abec7a.txt  0045848d-9ae5-4451-9c56-feed620365c7.txt  004a25d4-b68b-43e2-bd99-5b9a78c78699.txt  004c63ab-65b6-448d-9f21-854088425bba.txt  00545a12-7d7d-43e9-8957-18e2c26fa658.txt  00642ca7-206f-4815-aaa0-a380dfcb4d75.txt  00666a1c-164a-4de6-a7c0-247670044f1d.txt  (+14212 more)
(+19424 files in other folders)
