[project]
name = "mats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.3",
    "datasets>=3.3.2",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "nnsight>=0.4.3",
    "polars>=1.23.0",
    "together>=1.4.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wandb>=0.19.8",
]
